syntax = "proto3";

package worker;

option go_package = "mini-lakehouse/proto/worker";

// Worker service for task execution
service WorkerService {
  rpc RunTask(RunTaskRequest) returns (RunTaskResponse);
  rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse);
}

message RunTaskRequest {
  string job_id = 1;
  uint32 stage = 2;
  uint32 task_id = 3;
  uint32 attempt = 4;
  TaskSpec spec = 5;
}

message RunTaskResponse {
  bool success = 1;
  string error = 2;
  repeated TaskOutput outputs = 3;
  TaskMetrics metrics = 4;
}

message CancelTaskRequest {
  string job_id = 1;
  uint32 task_id = 2;
}

message CancelTaskResponse {
  bool success = 1;
}

message TaskSpec {
  TaskOperation operation = 1;
  repeated string input_files = 2;
  string filter = 3;
  repeated string group_by = 4;
  repeated Aggregate aggregates = 5;
  uint32 num_partitions = 6;
  string output_path = 7;
  repeated string projection = 8;
}

enum TaskOperation {
  SCAN = 0;
  MAP_FILTER = 1;
  MAP_PROJECT = 2;
  MAP_AGG = 3;
  REDUCE_AGG = 4;
  SHUFFLE = 5;
}

message Aggregate {
  string function = 1;  // "sum", "count", "avg", "min", "max"
  string column = 2;
  string alias = 3;
}

message TaskOutput {
  uint32 partition = 1;
  string path = 2;
  uint64 rows = 3;
  uint64 size = 4;
}

message TaskMetrics {
  uint64 duration_ms = 1;
  uint64 rows_processed = 2;
  uint64 bytes_read = 3;
  uint64 bytes_written = 4;
}